--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>ashleygoh.me</title>
     </head>
     <body>
-        A webpage
+        <img src="hello-world.webp" alt="Hello world!">
     </body>
 </html>
